--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
 
   firebase_auth: ^4.17.4
   clipboard: ^0.1.3
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
