--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.3.2
   path_provider: ^2.1.2
   collection: ^1.18.0
+  cloud_firestore: ^4.15.8
 
 dev_dependencies:
   flutter_test:
