--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path_provider: ^2.1.2
   collection: ^1.18.0
   cloud_firestore: ^4.15.8
+  bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
