--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,13 @@ dependencies:
   path_provider: ^2.1.2
   collection: ^1.18.0
   cloud_firestore: ^4.15.8
-  bloc: ^8.1.3
+
   flutter_bloc: ^8.1.4
+  equatable: ^2.0.5
+  flutter_launcher_icons: ^0.13.1
+  intl: ^0.19.0
+  device_preview: ^1.2.0
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
